load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpcauth",
    srcs = [
        "all_authenticator.go",
        "allow_authenticator.go",
        "any_authenticator.go",
        "authenticator.go",
        "deny_authenticator.go",
        "jwt_authenticator.go",
        "peer_credentials_authenticator.go",
        "peer_transport_credentials.go",
        "peer_transport_credentials_bsd.go",
        "peer_transport_credentials_disabled.go",
        "peer_transport_credentials_linux.go",
        "spiffe_authenticator.go",
        "tls_client_certificate_authenticator.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/grpcauth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/clock",
        "//pkg/jwt",
        "//pkg/program",
        "//pkg/proto/auth",
        "//pkg/proto/configuration/grpc",
	"//pkg/proto/configuration/spiffe",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_x_sync//semaphore",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "grpcauth_test",
    srcs = [
        "all_authenticator_test.go",
        "allow_authenticator_test.go",
        "any_authenticator_test.go",
        "deny_authenticator_test.go",
        "peer_credentials_authenticator_test.go",
        "tls_client_certificate_authenticator_test.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "peer_transport_credentials_test.go",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "peer_transport_credentials_test.go",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "peer_transport_credentials_test.go",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "peer_transport_credentials_test.go",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "peer_transport_credentials_test.go",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":grpcauth",
        "//internal/mock",
        "//pkg/auth",
        "//pkg/proto/auth",
        "//pkg/proto/configuration/grpc",
        "//pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_mock//gomock",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_proto_otlp//common/v1:common",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)
