load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "configuration.go",
        "header_adding_round_tripper.go",
        "status_code.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/http",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/http",
        "//pkg/util",
        "@org_golang_google_grpc//codes",
    ],
)
