load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "configuration.go",
        "header_adding_round_tripper.go",
        "metrics_round_tripper.go",
        "server.go",
        "status_code.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/http",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/program",
        "//pkg/proto/configuration/http",
        "//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_google_grpc//codes",
    ],
)
