load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jmespath",
    srcs = ["expression.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/jmespath",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock",
        "//pkg/program",
        "//pkg/proto/configuration/jmespath",
        "//pkg/util",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)

go_test(
    name = "jmespath_test",
    srcs = ["expression_test.go"],
    deps = [
        ":jmespath",
        "//internal/mock",
        "//pkg/clock",
        "//pkg/program",
        "//pkg/proto/configuration/jmespath",
        "//pkg/testutil",
        "//pkg/util",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_uber_go_mock//gomock",
    ],
)
